src/main/java/com/example/vtpnano/errors/CustomizedException.java
package com.example.vtpnano.errors;

public class CustomizedException {
}
